@@ -19,7 +19,7 @@ URL: http://www.gnome.org
 Docdir: %{prefix}/doc
 
 
-Requires: xscreensaver >= 3.00
+Requires: xscreensaver >= 3.00 | gnome-screensaver >= 0.0.7
 Requires: gnome-libs >= 1.0.0
 Requires: ORBit >= 0.4.0
 
