@@ -8,8 +8,8 @@
 	    <type>bool</type>
             <default>true</default>
             <locale name="C">
-	        <short>Start XScreenSaver</short>
-                <long>Run XScreenSaver at login</long>
+	        <short>Start screensaver</short>
+                <long>Run screensaver at login</long>
             </locale>
         </schema>
 	<schema>
@@ -20,7 +20,7 @@
 	    <default>true</default>
             <locale name="C">
                 <short>Show Startup Errors</short>
-	        <long>Display a dialog when there are errors running XScreenSaver</long>
+	        <long>Display a dialog when there are errors running the screensaver</long>
 	    </locale>
 	</schema>
     </schemalist>
